feat: 教材説明を日英併記で追加し、外部リンクボタンを削除
- 「About These Materials / この教材について」セクションを追加
- 英語と日本語の説明を区別しやすいよう背景色を設定
- 各レッスンカードから「外部リンク」ボタンを削除
- よりシンプルで直感的なUIに改善

--- a/index.html
+++ b/index.html
@@ -23,6 +23,14 @@
             <p>各レッスンのスライドをクリックして学習を始めましょう。</p>
         </section>
 
+        <section class="about">
+            <h2>📖 About These Materials / この教材について</h2>
+            <div class="about-content">
+                <p class="english">These slide materials have been developed as part of Tohoku University's Japanese Language Program for pre-intermediate level (Level 3) learners. Each lesson includes interactive slide materials. These slides can be used before or after reading the textbook explanations. Please use them for preview and review of your classes.</p>
+                <p class="japanese">このスライド教材は東北大学の日本語教育プログラムの一部として、初中級レベル（レベル3）の学習者を対象に開発されました。各レッスンにはインタラクティブなスライド教材が含まれています。このスライド教材は、教科書の説明を読む前や読んだ後に使うことができます。授業の予習や、復習に活用してください。</p>
+            </div>
+        </section>
+
         <section class="lessons">
             <h2>第1課 - Lesson 1</h2>
             
@@ -36,7 +44,6 @@
                     <div class="lesson-content">
                         <p class="lesson-description">第1課 パート1</p>
                         <a href="lesson.html?id=L1-1" class="btn-primary">スライドを開く</a>
-                        <a href="https://view.genially.com/692515d6f021a8539ca7ac08" target="_blank" class="btn-secondary">外部リンク</a>
                     </div>
                 </div>
 
@@ -49,7 +56,6 @@
                     <div class="lesson-content">
                         <p class="lesson-description">第1課 パート2</p>
                         <a href="lesson.html?id=L1-2" class="btn-primary">スライドを開く</a>
-                        <a href="https://view.genially.com/69259b0592682ae90be9956a" target="_blank" class="btn-secondary">外部リンク</a>
                     </div>
                 </div>
 
@@ -62,7 +68,6 @@
                     <div class="lesson-content">
                         <p class="lesson-description">第2課 パート1</p>
                         <a href="lesson.html?id=L2-1" class="btn-primary">スライドを開く</a>
-                        <a href="https://view.genially.com/6926dc0131d78c8e66a4d1bc" target="_blank" class="btn-secondary">外部リンク</a>
                     </div>
                 </div>
 
@@ -75,7 +80,6 @@
                     <div class="lesson-content">
                         <p class="lesson-description">第2課 パート2</p>
                         <a href="lesson.html?id=L2-2" class="btn-primary">スライドを開く</a>
-                        <a href="https://view.genially.com/6926ddbc31d78c8e66a52328" target="_blank" class="btn-secondary">外部リンク</a>
                     </div>
                 </div>
 
@@ -88,7 +92,6 @@
                     <div class="lesson-content">
                         <p class="lesson-description">第3課 パート1</p>
                         <a href="lesson.html?id=L3-1" class="btn-primary">スライドを開く</a>
-                        <a href="https://view.genially.com/6926df11369dc90b3bab08e0" target="_blank" class="btn-secondary">外部リンク</a>
                     </div>
                 </div>
 
@@ -101,7 +104,6 @@
                     <div class="lesson-content">
                         <p class="lesson-description">第3課 パート2</p>
                         <a href="lesson.html?id=L3-2" class="btn-primary">スライドを開く</a>
-                        <a href="https://view.genially.com/6926e02cee2ad5958762e4ef" target="_blank" class="btn-secondary">外部リンク</a>
                     </div>
                 </div>
             </div>
