feat: ようこそセクションを削除し、使用方法の説明を追加
- 「ようこそ / Welcome」セクションを削除してシンプルに
- 教材説明に名前入力と複数回使用の方法を追記
- 日英両方で使用方法を明記（例：John-1, John-2）

--- a/index.html
+++ b/index.html
@@ -17,17 +17,11 @@
     </header>
 
     <main class="container">
-        <section class="intro">
-            <h2>📚 ようこそ / Welcome</h2>
-            <p>このサイトでは、初中級レベルの日本語学習教材をご利用いただけます。</p>
-            <p>各レッスンのスライドをクリックして学習を始めましょう。</p>
-        </section>
-
         <section class="about">
             <h2>📖 About These Materials / この教材について</h2>
             <div class="about-content">
-                <p class="english">These slide materials have been developed as part of Tohoku University's Japanese Language Program for pre-intermediate level (Level 3) learners. Each lesson includes interactive slide materials. These slides can be used before or after reading the textbook explanations. Please use them for preview and review of your classes.</p>
-                <p class="japanese">このスライド教材は東北大学の日本語教育プログラムの一部として、初中級レベル（レベル3）の学習者を対象に開発されました。各レッスンにはインタラクティブなスライド教材が含まれています。このスライド教材は、教科書の説明を読む前や読んだ後に使うことができます。授業の予習や、復習に活用してください。</p>
+                <p class="english">These slide materials have been developed as part of Tohoku University's Japanese Language Program for pre-intermediate level (Level 3) learners. Each lesson includes interactive slide materials. These slides can be used before or after reading the textbook explanations. Please use them for preview and review of your classes.<br><br>Please enter your name on the first screen when using the materials. If you want to use the same slide materials multiple times, you can change your name each time (e.g., John-1, John-2).</p>
+                <p class="japanese">このスライド教材は東北大学の日本語教育プログラムの一部として、初中級レベル（レベル3）の学習者を対象に開発されました。各レッスンにはインタラクティブなスライド教材が含まれています。このスライド教材は、教科書の説明を読む前や読んだ後に使うことができます。授業の予習や、復習に活用してください。<br><br>最初の画面で名前を入力して使用してください。同じスライド教材を使うときは、名前を変えれば、何回も使用できます。（例：John-1, John-2）</p>
             </div>
         </section>
 
