fix: レッスン構成を修正（第1課、第2課、第3課に分離）
- 第1課: L1-1, L1-2
- 第2課: L2-1, L2-2
- 第3課: L3-1, L3-2
- 各課を独立したセクションとして表示

--- a/index.html
+++ b/index.html
@@ -52,7 +52,13 @@
                         <a href="lesson.html?id=L1-2" class="btn-primary">スライドを開く</a>
                     </div>
                 </div>
+            </div>
+        </section>
 
+        <section class="lessons">
+            <h2>第2課 - Lesson 2</h2>
+            
+            <div class="lesson-grid">
                 <!-- L2-1 -->
                 <div class="lesson-card">
                     <div class="lesson-header">
@@ -76,7 +82,13 @@
                         <a href="lesson.html?id=L2-2" class="btn-primary">スライドを開く</a>
                     </div>
                 </div>
+            </div>
+        </section>
 
+        <section class="lessons">
+            <h2>第3課 - Lesson 3</h2>
+            
+            <div class="lesson-grid">
                 <!-- L3-1 -->
                 <div class="lesson-card">
                     <div class="lesson-header">
